[package]
name = "malebolge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
memmap2 = "0.9.0"
object = { version = "0.32.1", features = ["pe", "read_core", "write_std"], default-features = false }
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
] }
rand = "0.8.5"

[profile.release]
debug = true
lto = true
panic = "abort"
codegen-units = 1
