[package]
name = "serpent"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
] }

[workspace]
resolver = "2"
members = [
    "app"
]
